Changelog:
==========

1.82.0 - 2013-??-??

    Engines:
        tsMuxeR:
            - Fixed 24-bit FLAC support with tsMuxeR

    Misc:
        - Fix issue with VirtualBox and PMS launchers (thanks, thepadawan42)

1.81.0 - 2013-04-21

    Engines:
        FFmpeg:
            - Add/fix audio channel options
            - Build script: add HTTPS support

    WEB.conf:
        - Add support for the file:// protocol
        - Match protocols (e.g. mms://...) before extensions (e.g. http://example.com/foo.mms)

    Misc:
        - Media Parser v1: fix audio channel parsing
        - Fix for "Can't assign requested address" bug after update to Java 1.6.0_45 on Mac OSX

1.80.0 - 2013-04-06

    Regressions:
        - Re-allow all transcode engines to be disabled

    PMS.conf:
        - FFmpeg has been renamed ffmpeg_video_custom_options and now defaults to null

    Renderers:
        - Document TranscodeVideo and TranscodeAudio profiles
        - Panasonic TVs: Add "exclusive" option to SeekByTime to work around a transcoding issue
        - PS3: Restore seek-by-time support for streaming
        - Android: allowing chunked transfer
        - AirPlayer & iPad/iPhone: transcoding to WMV format gives better results
        - Improved support for Sony Bravia HX (thanks, mazey!)
        - Improved streaming support for some renderers (thanks, ExSport!)

    Engines:
        FFmpeg Video and FFmpeg Web Video:
            - Support all three TranscodeVideo profiles: WMV, MPEGTSAC3 and MPEGPSAC3
            - Preserve source video quality
        FFmpeg Video:
            - Custom FFmpeg options are now read before each transcode rather than only at startup
              (parity with custom MEncoder options)
            - Rescale videos larger than the renderer's max height/width
            - Updated to use "wmav2" codec (#1583)
        FFmpeg Audio: support all TranscodeAudio profiles
        VLC:
            - Added support for VLC as engine (thanks, LordQuackstar!)
